# dandy

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  MANIFEST.in  README.md  base_requirements.txt  dandy_settings.py  dev_requirements.txt  development_requirements.txt  justfile  makefile  mkdocs.yml  mkdocs_requirements.txt  production_requirements.txt  pyproject.toml  refactoring.py  requirements.txt  ruff.toml  run_coverage.py  setup.py
.dev/: dandy_settings.py  run_coverage.py  run_tests.py  utils.py
.github/: copilot-instructions.md
.github/workflows/: nines_testing.yml  publish_pypi_package.yml  run_tests.yml
.run/: Run Cookie Example.run.xml  Run Coverage.run.xml  Run Example.run.xml  Run Pirate Example.run.xml  Run Tests.run.xml
dandy/: __init__.py  conf.py  config.py  const.py  constants.py  consts.py  default_settings.py  settings.py  utils.py
dandy/agent/: __init__.py  agent.py  exceptions.py  llm_agent.py  llm_controller.py  llm_strategy.py  plan.py  prompts.py  recorder.py  resource.py  service.py  strategy.py
dandy/audio/: connector.py  exceptions.py  mixin.py  service.py
dandy/bot/: __init__.py  base.py  bot.py  events.py  exceptions.py  llm_bot.py  mixin.py  recorder.py  service.py
dandy/cache/: __init__.py  cache.py  decorators.py  events.py  exceptions.py  tools.py  utils.py
dandy/calculator/: llm_calculator.py
dandy/cli/: cli.py  command.py  conf.py  constants.py  main.py  processing_phrases.py  session.py  settings.py  utils.py
dandy/config/: config.py  handlers.py
dandy/connector/: exceptions.py
dandy/core/: debug.py  exceptions.py  singleton.py  type_vars.py  url.py  utils.py
dandy/debug/: __init__.py  debug.html  debug.py  decorators.py  event.py  events.py  exceptions.py  utils.py
dandy/file/: exceptions.py  mixin.py  service.py  utils.py
dandy/future/: __init__.py  exceptions.py  executor.py  future.py
dandy/handler/: events.py  handler.py
dandy/http/: config.py  connector.py  exceptions.py  intel.py  mixin.py  service.py  url.py
dandy/intel/: __init__.py  exceptions.py  factory.py  generator.py  intel.py  mixin.py  service.py  tools.py  type_vars.py  typing.py
dandy/job/: enums.py  event.py  job.py  step.py
dandy/llm/: __init__.py  conf.py  config.py  connector.py  enums.py  exceptions.py  handler.py  intel.py  mixin.py  options.py  prompt.py  recorder.py  reflection.py  service.py  snippet.py  utils.py
dandy/map/: __init__.py  exceptions.py  intel.py  llm_map.py  map.py  mapping.py  service.py
dandy/pipeline/: pipeline.py
dandy/processor/: controller.py  processor.py  recorder.py  strategy.py
dandy/recorder/: __init__.py  decorators.py  events.py  exceptions.py  recorder.py  recording.py  utils.py
dandy/schema/: __init__.py  schema.py  type_vars.py  utils.py
dandy/service/: exceptions.py  service.py
dandy/tool/: tool.py
dandy/toolbox/: main.py  utils.py
dandy/vision/: exceptions.py  mixin.py  service.py
dandy/workflow/: __init__.py  events.py  exceptions.py  step.py  workflow.py
docs/: about.md  changelog.md  evaluation.md  flow.md  index.md  process_sequence.md  project_flow.md  project_overview.md  terminology.md  terms.md
docs/about/: branding.md  changelog.md  contributors.md  credits.md
docs/api/: processor.md
docs/changelog/: archived_changelog.md  changelog.md  v0_changelog.md  v1_changelog.md  v2_changelog.md
docs/examples/: cookie_receipe.md
docs/exceptions/: agent_exceptions.md  bot_exceptions.md  cache_exceptions.md  dandy_exceptions.md  debug_exceptions.md  exception_handling.md  future_exceptions.md  handling_errors.md  http_exceptions.md  intel_exceptions.md  llm_exceptions.md  map_exceptions.md  recorder_exceptions.md
docs/getting_started/: configuration.md  example.md  how_dandy_helps.md  installation.md  introduction.md  less_haloucinations.md  project_structure.md  quick_start.md  read_this_first.md  reducing_token_usage.md  structure.md  why_use_dandy.md
docs/guides/: concepts_guide.md  dandy_overview.md  introduction.md  quick_start.md  start_here.md
docs/landing/: quick_start.md  read_this_first.md  what_to_know.md
docs/research/: ai_services.md  overview.md
docs/roadmap/: 2024_roadmap.md  2025_roadmap.md  2026_roadmap.md  roadmap_legend.md
docs/scripts/: generate_api_reference.py
docs/templates/: home.html  landing.html
docs/tutorial/: start_here.md
docs/tutorials/: 01_setup.md  02_intel.md  03_prompts.md  04_llm_bot.md  05_recorder.md  06_llm_map.md  07_workflow.md  09_caching.md  10_llm_agent.md  agents.md  bots.md  caching.md  decoders.md  example_project.md  futures.md  handling_errors.md  index.md  intel.md  llm_agent.md  llm_map.md  maps.md  project_structure.md  prompt_test_document.md  prompts.md  recorder.md  setup.md  tutorial_recording_output.html  workflow.md
example/: book.md  dandy_settings.py  main.py  run.py  run_example.py
example/book/: enums.py  models.py
example/cookie/: cookie_example.py
example/pirate/: pirate_example.py
tests/: agents.py  constants.py  consts.py  dandy_settings.py  decorators.py  factories.py  pipelines.py  prompts.py  schemas.py  test_dandy.py  test_example.py  test_nines.py  test_settings.py  test_simple_example.py  workflows.py
tests/agent/: intel.py  llm_agents.py  llm_bots.py  llm_maps.py  test_agent.py  test_llm_agent.py  workflows.py
tests/agents/: work_order_comparison_agent.py
tests/audio/: test_bot.py  test_service.py
tests/bot/: llm_bots.py  test_bot.py  test_bot_exceptions.py  test_bot_instances.py  test_bot_vision.py  test_llm_bot.py  test_llm_bot_vision.py  test_reset_chain.py
tests/bots/: existing_work_orders_bot.py  seed_bot.py  work_order_comparison_bot.py
tests/cache/: caches.py  intel.py  test_cache.py  test_cache_hashing.py  (+2 more)
workspace/: base_model_json_schema_mutation.ipynb  choice_llm_bot_playground.py  playground.py  vllm.http
(+571 files in other folders)
