[project]
name = "dandy"
description = "Python Artificial Intelligence Framework"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md", content-type = "text/markdown" }
authors = [
    { name = "Nathan Johnson", email = "nathanj@stratusadv.com" },
]
keywords = ["dandy", "ai", "llm", "agent", "prompt", "gpt", "bot", "workflow", "automation", "artificial intelligence"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dynamic = ["version", "dependencies"]

[project.scripts]
dandy = "dandy.toolbox.main:main"

[project.urls]
Homepage = "https://dandysoftware.com"
Documentation = "https://dandysoftware.com"
Repository = "https://github.com/stratusadv/dandy"
Changelog = "https://dandysoftware.com/changelog/changelog/"

[build-system]
requires = [
    "build",
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
dandy = [
    "**/*.html",
]

[tool.setuptools.dynamic]
version = { attr = "dandy.consts.__VERSION__" }
dependencies = { file = "requirements.txt" }

[tool.ruff]
extend = "ruff.toml"