[project]
name = "dandy"
description = "Python Artificial Intelligence Framework"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
authors = [
    { name = "Nathan Johnson", email = "nathanj@stratusadv.com" },
]
keywords = ["dandy", "ai", "cli", "llm", "agent", "prompt", "gpt", "bot", "workflow", "automation", "artificial intelligence"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"

dynamic = ["version"]

dependencies = [
    "blessed==1.29.0",
    "requests==2.32.5",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1"
]

[project.optional-dependencies]
development = [
    "build",
    "Faker",
    "ruff",
    "setuptools",
    "twine",
    "ty",
    "wheel"
]

documentation = [
    "mkdocs",
    "markdown-exec[ansi]",
    "mkdocstrings-python",
    "mkdocs-gen-files",
    "mkdocs-include-markdown-plugin",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocs-table-reader-plugin",
    "openpyxl"
]

[project.scripts]
dandy = "dandy.cli.main:main"

[project.urls]
Homepage = "https://dandysoftware.com"
Documentation = "https://dandysoftware.com"
Repository = "https://github.com/stratusadv/dandy"
Changelog = "https://dandysoftware.com/changelog/changelog/"

[build-system]
requires = [
    "build",
    "setuptools",
    "wheel",
]

build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
    "*/tests/*",
    '*/venv/*',
    '*/.venv/*',
    '*/example/*',
    '*/docs/*'
]

[tool.setuptools.package-data]
dandy = [
    "**/*.html",
]

[tool.setuptools.dynamic]
version = { attr = "dandy.constants.__VERSION__" }

[tool.ruff]
extend = "ruff.toml"
[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.svg,*.css'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''
